--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ MarkupSafe==0.23
 SQLAlchemy==0.9.4
 Werkzeug==0.9.6
 argparse==1.2.1
+gunicorn==19.0.0
 itsdangerous==0.24
 pymongo==2.7.1
 wsgiref==0.1.2
